<resources>
    <string name="app_name">Assistant</string>
    <string name="app_full_name">Assistant Bag</string>

    <!--Nav menu-->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--Menu-->
    <string name="active">Tag Aktif</string>
    <string name="catalog">Daftar</string>
    <string name="schedule">Jadwal</string>
    <string name="wifi">Jaringan</string>
    <string name="about_us">Tentang Kami</string>
    <string name="logout">Keluar</string>

    <!--Action-->
    <string name="add">Tambah</string>
    <string name="edit">Ubah</string>
    <string name="update">Perbarui</string>
    <string name="delete">Hapus</string>
    <string name="clear_active">Bersihkan Tag Aktif</string>
    <string name="clear_active_question">Anda yakin ingin mereset ulang tag aktif?</string>
    <string name="clear_history">Bersihkan Riwayat</string>
    <string name="clear_history_question">
        Anda yakin ingin menghapus seluruh data riwayat?
        \nOperasi ini tidak dapat diurungkan.
    </string>
    <string name="positive_button">Ya</string>
    <string name="negative_button">Tidak</string>
    <string name="pick_source">Pilih dengan</string>

    <!--Crescento-->
    <string name="crescento_header">Terdapat</string>
    <string name="crescento_background">Crescento</string>
    <string name="menu_option">Menu</string>
    <string name="dots_option">⋮</string>
    <string name="crescento_object">Benda</string>
    <string name="zero">0</string>
    <string name="crescento_backpack_icon">Backpack icon</string>
    <string name="crescento_footer">Di dalam tas</string>
    <string name="see_schedule">Lihat Jadwal</string>
    <string name="default_tag_name">Kamus Ingris</string>
    <string name="default_tag_id">6F0086534A</string>
    <string name="default_tag_time">9:42:10</string>
    <string name="default_tag_date">30-05-2018</string>
    <string name="status_in">Status In</string>
    <string name="status_out">Status Out</string>
    <string name="digit_option">⋮</string>

    <!--No Data-->
    <string name="no_data">Data kosong \nLakukan pemindaian untuk menambah data.</string>
    <string name="no_history">Riwayat saat ini kosong.</string>
    <string name="no_schedule">Tidak ada jadwal untuk hari ini.</string>
    <string name="plus">+</string>
    <string name="no_name">(no-name)</string>

    <!--Day-->
    <string name="mon">Senin</string>
    <string name="tue">Selasa</string>
    <string name="wed">Rabu</string>
    <string name="thu">Kamis</string>
    <string name="fri">Jumat</string>
    <string name="sat">Sabtu</string>
    <string name="sun">Minggu</string>

    <!--ActionBar-->
    <string name="unselected">Pilih benda</string>
    <string name="zero_selected">0 benda terpilih</string>
    <string name="selected">benda terpilih</string>

    <!--Toast-->
    <string name="schedule_deleted">Item berhasil dihapus dari jadwal</string>
    <string name="tag_updated">Data tag berhasil diperbarui</string>
    <string name="tag_deleted">Tag berhasil dihapus</string>

    <!--Builder-->
    <string name="update_tag">Ubah data benda</string>

    <!--Error-->
    <string name="error_empty_field">Kolom tidak boleh kosong</string>
    <string name="error_empty_email">Email tidak boleh kosong!</string>
    <string name="error_empty_password">Password tidak boleh kosong!</string>
    <string name="error_empty_device">ID Alat tidak boleh kosong!</string>
    <string name="error_min_password">Password terlalu pendek, masukkan setidaknya 6 karakter!</string>
    <string name="error_auth_failed">Gagal masuk, periksa kembali email dan password!</string>
    <string name="error_empty_registered_email">Masukkan email Anda yang telah terdaftar</string>
    <string name="error_sent_instruction">Kesalahan, gagal mengirim instruksi pada email Anda!</string>

    <!--Success-->
    <string name="success_signup">Akun berhasil terdaftar.</string>
    <string name="success_sent_instruction">Kami telah mengirim instruksi untuk mengatur ulang password Anda!</string>

    <!--Login-->
    <string name="bt_back"><![CDATA[<< Kembali]]></string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="device">ID Alat</string>

    <!--Speech Recognition-->
    <string name="speech_recognition">Masukkan Perintah Suara</string>
    <string name="speech_initial">Yang harus dibawa adalah </string>

    <!--Info-->
    <string name="about_us_message">
        Proyek Akhir Skripsi: Assistant Bag.
        \nDikembangkan oleh Aprilia Audina dan Wizdan Mohammad Gibran Shodri.
        \n\nPoliteknik Negeri Jakarta
    </string>
    <string name="wifi_troubleshoot">Assistant Bag Tidak Bekerja?</string>
    <string name="wifi_message">
        Assistant Bag terhubung otomatis dengan jaringan terakhir yang ia pakai saat dinyalakan.
        Ketika jaringan tersebut tidak tersedia, maka Assistant Bag akan berubah menjadi hotspot.
    </string>

    <string name="wifi_step_intro">Ikuti langkah berikut:</string>

    <string name="wifi_step_1">
        Restart alat Assistant Bag, buka pengaturan WiFi pada Android
        lalu hubungkan Android dengan ID alat (tertera pada box alat).
    </string>
    <string name="wifi_step_2">
        Setalah terhubung, Android akan memunculkan halaman manajemen WiFi.
        Pada halaman tersebut, atur Assistant Bag untuk terhubung dengan jaringan WiFi yang tersedia.
    </string>

    <string name="wifi_step_3">
        Kini jaringan baru tersimpan oleh Assistant Bag dan akan digunakan untuk kedepannya.
    </string>

</resources>
