<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wizdanapril.assistantbag.activities.HomeActivity"
    android:layout_gravity="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_blue"
                android:contentDescription="@string/crescento_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/nav_menu"
                        android:layout_width="0dp"
                        android:layout_height="24sp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="0.2"
                        android:contentDescription="@string/menu_option"
                        android:src="@drawable/ic_menu" />

                    <customfonts.TextView_Lato_Medium
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp"
                        android:layout_marginTop="50dp"
                        android:layout_weight="1.6"
                        android:gravity="center_horizontal"
                        android:text="@string/crescento_header"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_vertical_ellipsis"
                        android:layout_width="0dp"
                        android:layout_height="24sp"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:layout_weight="0.2"
                        android:gravity="end"
                        android:text="@string/dots_option"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <customfonts.TextView_Lato_Medium
                        android:id="@+id/tv_active_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="#fff"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <customfonts.Textview_Lato_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:text="@string/crescento_object"
                        android:textColor="#fff"
                        android:textSize="22sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/crescento_backpack_icon"
                        android:src="@drawable/backpack" />

                    <customfonts.Textview_Lato_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/crescento_footer"
                        android:textColor="#fff"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="185sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <customfonts.TextView_Lato_Medium
                    android:id="@+id/to_catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/roun_rect_white"
                    android:text="@string/catalog"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <customfonts.TextView_Lato_Medium
                    android:id="@+id/to_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/roun_rect_gray"
                    android:text="@string/see_schedule"
                    android:textColor="@color/colorBackroundWhite"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/frame_layout"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <customfonts.TextView_Lato_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="13dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/active"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <include layout="@layout/snippet_recycler" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>


</RelativeLayout>


