<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        android:background="@drawable/cardview_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_item"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:src="@drawable/shoes"
                app:civ_border_color="@color/colorBackroundWhite"
                app:civ_border_width="2dp"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.8"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <customfonts.TextView_Lato_Medium
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_tag_name"
                    android:textColor="@color/colorGray"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <customfonts.TextView_Lato_Medium
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/roun_rect_lightgray"
                    android:gravity="center"
                    android:text="@string/default_tag_id"
                    android:textColor="@color/colorGray"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_blue" />

                    <customfonts.TextView_Lato_Medium

                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/default_tag_time"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <customfonts.Textview_Lato_Regular
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_tag_date"
                    android:textColor="@color/colorLightGray"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>